# github-issues-analyzer

./: .gitignore  README.md  analyze_issues.py  analyzer.py  api.py  app.py  config.py  db_utils.py  fine_tune_dataset.py  format_dataset.py  generate_dataset.py  requirements.txt  utils.py
.github/workflows/: generate-dataset.yml
libs/analyzer/: .gitignore  README.md  __init__.py  analyzer.py  db_utils.py  pyproject.toml  requirements.txt
libs/analyzer/services/: __init__.py  duplicate_service.py  fine_tuning.py  github_service.py  labeling_service.py  priority_severity_service.py
libs/dataset/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
libs/dataset/dataset/: __init__.py  database_manager.py  fetch_issues.py  github_fetcher.py  issue_cleaner.py  priority_utils.py  process_issues.py  severity_utils.py  utils.py
models/: issue_model.py
services/: duplicate_service.py  fine_tuning.py  github_service.py  labeling_service.py  priority_severity_service.py
