[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset"
version = "0.1.0"
description = "A library to fetch and store GitHub issues with labels in SQLite."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests>=2.0.0",
    "langdetect>=1.0.9",
    "python-dotenv>=0.21.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
