[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset"
version = "0.1.0"
description = "A library to fetch and store GitHub issues with labels in SQLite."
authors = [{ name = "Sharjeel Yunus", email = "sharjeel924@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "requests",
    "langdetect",
    "python-dotenv",
    "fuzzywuzzy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
